--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ processResources {
         exclude 'mcmod.info'
     }
 }
-
+/*
 task signJar(type: SignJar, dependsOn: reobfJar) {
 
     onlyIf {
@@ -99,3 +99,25 @@ task signJar(type: SignJar, dependsOn: reobfJar) {
 }
 
 build.dependsOn signJar
+*/
+
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    from (sourceSets.main.output) {
+        include 'LICENSE.txt'
+    }
+
+    classifier = 'sources'
+}
+
+task deobfJar(type: Jar) {
+    from sourceSets.main.output
+
+    //manifest commonManifest
+    classifier = 'deobf'
+}
+
+artifacts {
+    archives sourcesJar
+    archives deobfJar
+}
